UPDATE: CLO-13946 - Run after-commit engine tests on jdk8/9
Reviewer: nobody

CTE needs java.xml.bind that is not part of java9 -> add new jvmarg.